@@ -1,3 +1,6 @@
+2009-09-13  6.5.6-0 Cristy  <quetzlzacatenango@image...>
+  * Fix ICON alpha mask scanline pad.
+
 2009-09-11  6.5.5-10 Cristy  <quetzlzacatenango@image...>
   * Return the global maximum threads to avoid the rare cache view assertions.
   * Throw an end-of-file exception for truncated raw gray images.
